--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "aos": "^2.3.4",
     "framer-motion": "^5.4.5",
     "gsap": "^3.8.0",
-    "next": "12.0.4",
+    "next": "^12.3.4",
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-inview": "^4.3.11",
     "react-intersection-observer": "^8.33.0",
-    "react-ionicons": "^4.2.0",
+    "react-ionicons": "^1.5.7",
     "react-medium-image-zoom": "^4.3.5",
     "react-parallax-tilt": "^1.5.81",
     "react-rotating-text": "^1.4.1",
@@ -35,7 +35,7 @@
     "react-typical": "^0.1.3",
     "react-typist": "^2.0.5",
     "reactstrap": "^9.0.1",
-    "sharp": "^0.29.3",
+    "sharp": "^0.31.3",
     "swiper": "^7.2.0",
     "three": "^0.135.0"
   },
