--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-inview": "^4.3.11",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^8.33.0",
-    "react-ionicons": "^1.5.7",
+    "react-ionicons": "^3.1.4",
     "react-medium-image-zoom": "^4.3.5",
     "react-parallax-tilt": "^1.5.81",
     "react-rotating-text": "^1.4.1",
