--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-spring": "^9.3.2",
     "react-sticky": "^6.0.3",
     "react-sticky-el": "^2.0.9",
-    "react-tilt": "^0.1.4",
+    "react-tilt": "^1.0.2",
     "react-typical": "^0.1.3",
     "react-typist": "^2.0.5",
     "reactstrap": "^9.0.1",
@@ -43,8 +43,8 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4"
-  },"engines": {
+  },
+  "engines": {
     "node": "16.x"
   }
 }
-
