--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"next": "^12.3.4",
 		"next-images": "^1.8.4",
 		"react": "^18.2.0",
-		"react-dom": "17.0.2",
+		"react-dom": "^18.2.0",
 		"react-hook-inview": "^4.3.11",
 		"react-icons": "^4.7.1",
 		"react-intersection-observer": "^8.33.0",
