--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"react-tilt": "^1.0.2",
 		"reactstrap": "^9.0.1",
 		"sharp": "^0.31.3",
-		"swiper": "^7.2.0",
+		"swiper": "8.3.2",
 		"three": "^0.135.0"
 	},
 	"devDependencies": {
